test/Fail/Issue2004Op.err
Issue2004Op.agda:17.12-15: error: [UnequalTypes]
The type
  Set₁
is not a subtype of
  x ∈ Y → x ∈ Y
when checking that the expression Set has type x ∈ Y → x ∈ Y
